Fix missing color changes

--- a/static/less/card.less
+++ b/static/less/card.less
@@ -6,7 +6,7 @@
     // common
     position: relative;
     overflow: hidden;
-    border: 1px solid #999;
+    border: 1px solid @border_color;
     background: #fafafa;
 
     .inline-block;
