--- a/static/less/includes.less
+++ b/static/less/includes.less
@@ -34,7 +34,7 @@
 }
 
 .box-shadow {
-    box-shadow: 1px 1px rgba(128, 128, 128, 0.3);
+    box-shadow: 1px 1px rgba(192, 192, 192, 0.08);
 }
 
 .inline-block {
