--- a/static/less/person.less
+++ b/static/less/person.less
@@ -91,9 +91,9 @@
     padding-top: 20px;
 
     background: @bg_color;
-    border-right: 1px solid #999;
+    border-right: 1px solid @border_color;
     border-left: 2px solid @bg_color;
-    border-top: 1px solid #999;
+    border-top: 1px solid @border_color;
     border-bottom: 2px solid @bg_color;
 
     text-align: right;
