--- a/static/less/polidic.mobile.less
+++ b/static/less/polidic.mobile.less
@@ -29,7 +29,7 @@ h1 {
     position: relative;
     margin: 0 5%;
     padding: 0;
-    border: 1px solid #999;
+    border: 1px solid @border_color;
     .border-radius;
     .border-box;
 
@@ -38,7 +38,7 @@ h1 {
 
 .itemlist li {
     position: relative;
-    border-top: 1px solid #999;
+    border-top: 1px solid @border_color;
     list-style: none;
     margin-left: 0;
     .border-box;
