--- a/static/less/search.less
+++ b/static/less/search.less
@@ -89,7 +89,7 @@
         top: 0;
         bottom: 0;
         right: 0;
-        color: #999;
+        color: #ddd;
         font-size: 9pt;
         text-align: right;
     }
